<?xml version="1.0"?>
<package format="3">
  <name>sd_msgs</name>
  <version>2.2.0</version>
  <description>Messages to control the StreetDrone</description>

  <maintainer email="fionan@streetdrone.com">Fionan O'Sullivan</maintainer>
  <maintainer email="sgvandijk@gmail.com">Sander van Dijk</maintainer>

  <license>Apache 2.0</license>

  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
