<?xml version="1.0"?>
<package format="3">
  <name>sd_control</name>
  <version>2.2.0</version>
  <description>The sd_control package</description>

  <maintainer email="fionan@streetdrone.com">Fionán O'Sullivan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sd_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Other export tags go here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
