<?xml version="1.0"?>
<package format="3">
  <name>sd_description</name>
  <version>2.1.0</version>
  <description>The sd_description package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
